Revision history for Test::Most

0.22    2010-08-07
        - Added always_explain() and always_show().
        - Apply doc fixes from ranguard. Thanks :)

0.21_04 2010-02-06
        - Give people the ability to exclude test modules in case of
          conflicts.  This is to resolve: "Prototype mismatch: sub
          main::blessed ($) vs none" error with Moose and Test::Deep.  See
          https://rt.cpan.org/Ticket/Display.html?id=54362&results=e73ff63c5bf9ba0f796efdba5773cf3f

0.21_03 2010-02-06
        - Bump up dependency on Test::Builder.  Need that for done_testing()
          and to deprecate all_done().
        - Remove strict and warnings from tests since they no longer need them
          :)
        - Decided to bump up the minimum version number for all test modules.
          This module should be "one stop shopping" for most people.
        - Moderately significant POD update.

0.21_02 2010-02-06
        - Import strict an warnings.
        - Increase version requirement for
          https://rt.cpan.org/Ticket/Display.html?id=44790  Thanks to Gerda
          Shank for that.

0.21_01 2009-02-18
        - Have explain() depend on Test::More::note() (patch from Schwern)
        - Depend on Test::More directly (patch from Scwhern)

0.21    2009-02-18
        - No changes.  Update version for release.

0.20_02 2008-11-26
        - Make sure tests don't fail if optional Data::Dumper::Names
          dependency is not met.

0.20_01 2008-11-25
        - Added &show.  Like &explain, but tries to show variable names.

0.20    2008-11-06
        - If a test dies because die_on_fail() or 'Test::Most qw(die)' is
          triggered, we now throw a 'Test::Most::Exception' rather than simply
          dieing.  This makes it easier for software to understand what's
          happening if this is trapped in an eval.
        - Have t/00-load.t report dependency versions since CPAN testers does
          not reliably do this.