@@ -1,5 +1,7 @@
 Revision history for Test::Most
 
+        - added "Excluding Test Symbols" feature (RT#61146, Karen Etheridge).
+
 0.22    2010-08-07
         - Added always_explain() and always_show().
         - Apply doc fixes from ranguard. Thanks :)
